fixed the white space issue

--- a/public/admin/css/adminstyle.css
+++ b/public/admin/css/adminstyle.css
@@ -45,7 +45,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     max-width: var(--max-width);
-    margin: 0 auto;
+    margin: 0;
     background: #fff;
 }
 
